# geo

./: .gitignore  CMakeLists.txt  README.txt
pyWrapper/: .gitignore  README.txt  gen_code_python.sh  parse_c_header.py  python_wrapper.c.dna  setup.py
pyWrapper/test/: speed_test.py
src/: CMakeLists.txt  geom_computation.cpp  geom_computation.hpp
